<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_content_save"
        android:icon="@drawable/ic_action_content_save"
        android:title="@string/save_button_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_button_title"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_explain_approximate"
        android:orderInCategory="100"
        android:title="@string/action_explain_approximate_title"
        app:showAsAction="never"/>
</menu>
