<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical">

	<include layout="@layout/toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:foreground="?android:windowContentOverlay">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="10dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical">

					<EditText
						android:id="@+id/create_monitor_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/monitor_title_hint"
						android:inputType="textCapSentences"
						android:maxLength="30"
						android:maxLines="1"
						android:padding="12dp"
						android:textSize="@dimen/abc_text_size_large_material"/>

					<EditText
						android:id="@+id/url_text_field_create"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/url_hint"
						android:inputType="textUri"
						android:maxLines="1"
						android:padding="12dp"
						android:textSize="@dimen/abc_text_size_small_material"/>
				</LinearLayout>

				<ImageView
					android:id="@+id/status_icon"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_gravity="center"
					android:layout_marginStart="12dp"
					android:layout_weight="0"
					android:contentDescription="@string/content_description_status"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/detail_last_checked_text"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:textSize="@dimen/abc_text_size_caption_material"
					android:visibility="gone"/>

				<Space
					android:layout_width="match_parent"
					android:layout_height="24dp"/>
			</LinearLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="10dp"
				android:paddingEnd="10dp"
				android:text="@string/ping_frequency_header"
				android:textSize="@dimen/abc_text_size_medium_material"/>

			<SeekBar
				android:id="@+id/ping_frequency_seek_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:max="9"
				android:paddingBottom="14dp"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
				android:paddingTop="14dp"/>

			<TextView
				android:id="@+id/ping_frequency_explanation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:lines="3"
				android:maxLines="3"
				android:text="@string/ping_frequency_explanation"
				android:textSize="@dimen/abc_text_size_caption_material"/>

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="12dp"
					android:text="@string/date_picker_header"
					android:textSize="@dimen/abc_text_size_medium_material"/>

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1">

					<android.support.v7.widget.SwitchCompat
						android:id="@+id/date_picker_switch"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						app:showText="false"/>
				</FrameLayout>

			</LinearLayout>

			<TextView
				android:id="@+id/expiration_date_explanation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="14dp"
				android:text="@string/expiration_date_explanation"
				android:textSize="@dimen/abc_text_size_caption_material"
				android:visibility="gone"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/time_picker_output"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/ripple_accent"
					android:gravity="center"
					android:padding="5dp"
					android:text="@string/time_picker_label"
					android:textSize="@dimen/abc_text_size_small_material"
					android:visibility="gone"/>

				<Space
					android:layout_width="20dp"
					android:layout_height="match_parent"/>

				<TextView
					android:id="@+id/date_picker_output"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/ripple_accent"
					android:gravity="center"
					android:padding="5dp"
					android:text="@string/date_picker_label"
					android:textSize="@dimen/abc_text_size_small_material"
					android:visibility="gone"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
